# mongodb-elastic-sync-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: release-publish.yml
src/: config.py  main.py  service.py
